--- a/data/com.github.phase1geo.actioneer.shortcuts.ui
+++ b/data/com.github.phase1geo.actioneer.shortcuts.ui
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<interface domain="com.github.phase1geo.minder">
+<interface domain="com.github.phase1geo.actioneer">
   <object class="GtkShortcutsWindow" id="shortcuts">
     <property name="modal">0</property>
     <property name="resizable">0</property>
-    <property name="title" translatable="yes">Minder Shortcuts</property>
+    <property name="title" translatable="yes">Actioneer Shortcuts</property>
     <property name="section-name">global</property>
     <property name="view-name">file</property>
     <child>
